--- a/app/src/main/res/layout-sw480dp/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_nearby_filters.xml
@@ -18,53 +18,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <TextView
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
-                android:id="@+id/nearby_filter_label"
-                android:text="@string/filters" />
+                <TextView
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorText"
+                    android:textSize="17sp"
+                    android:id="@+id/nearby_filter_label"
+                    android:text="@string/filters" />
 
-            <TextView
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="sans-serif-light"
-                android:id="@+id/nearby_filter_done_btn"
-                android:text="@string/done" />
+                <TextView
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorText"
+                    android:textSize="17sp"
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/nearby_filter_done_btn"
+                    android:text="@string/done" />
 
-            <ProgressBar
-                android:visibility="gone"
-                android:id="@+id/nearby_filter_pb"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                android:layout_width="24dp"
-                android:layout_height="24dp"/>
+                <ProgressBar
+                    android:visibility="gone"
+                    android:id="@+id/nearby_filter_pb"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"/>
 
-            <TextView
-                android:id="@+id/nearby_filter_clear_btn"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/clear"
-                />
+                <TextView
+                    android:id="@+id/nearby_filter_clear_btn"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorText"
+                    android:textSize="17sp"
+                    android:fontFamily="sans-serif-light"
+                    android:text="@string/clear"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -95,7 +95,7 @@
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@string/category"
                 android:drawableStart="@drawable/ic_categorie_ok"
                 android:drawableTint="@color/colorText"
@@ -109,7 +109,7 @@
                 android:id="@+id/nearby_filter_category_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@string/none"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +121,8 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/nearby_filter_from"
+        android:visibility="gone"
+        android:id="@+id/nearby_filter_subcategory"
         app:cardElevation="5dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,9 +141,54 @@
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:text="@string/subcategory"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/nearby_filter_subcategory_tv"
+                android:drawablePadding="8dp"
+                android:textColor="@color/colorText"
+                android:textSize="14sp"
+                android:text="@string/none"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/nearby_filter_from"
+        app:cardElevation="5dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/nearby_filter_subcategory"
+        android:layout_marginHorizontal="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_new_timenote_share_with"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@string/from"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +200,7 @@
                 android:id="@+id/nearby_filter_from_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="Public"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -188,7 +234,7 @@
                 android:drawableStart="@drawable/ic_monetisation_ok"
                 android:drawableTint="@color/colorText"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@string/paid_timenote"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -200,7 +246,7 @@
                 android:id="@+id/nearby_filter_paid_timenote_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="Free and Paid"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -232,7 +278,7 @@
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:drawableStart="@drawable/ic_distance"
                 android:text="@string/distance_km"
                 app:layout_constraintTop_toTopOf="parent"
@@ -287,7 +333,7 @@
                 android:fontFamily="sans-serif-light"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:drawableStart="@drawable/ic_new_timenote_when"
                 android:text="@string/when"
                 app:layout_constraintTop_toTopOf="parent"
@@ -300,7 +346,7 @@
                 android:id="@+id/nearby_filter_when_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="Today"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -333,7 +379,7 @@
                 android:drawablePadding="8dp"
                 android:drawableStart="@drawable/ic_profile_from"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="@string/where"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -347,7 +393,7 @@
                 android:id="@+id/nearby_filter_where_tv"
                 android:drawablePadding="8dp"
                 android:textColor="@color/colorText"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:text="Tel Aviv"
                 android:maxLines="1"
                 app:layout_constraintTop_toTopOf="parent"
