--- a/app/src/main/res/layout-sw480dp/fragment_settings.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_settings.xml
@@ -427,39 +427,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:background="@color/colorElevated"
-                    android:id="@+id/profile_settings_timenote_format"
-                    android:layout_marginTop="8dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:background="@color/colorElevated"
+                android:id="@+id/profile_settings_timenote_format"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/default_settings_creation_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:padding="16dp"
+                    android:fontFamily="sans-serif-light"
+                    android:textColor="@color/colorText"
+                    android:text="@string/timenote_visibility_format"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/profile_settings_default_settings_at_creation_time"
+                    android:textColor="@color/colorText"
+                    android:fontFamily="sans-serif-light"
+                    android:padding="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/default_settings_creation_label"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-                    <TextView
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        android:padding="16dp"
-                        android:fontFamily="sans-serif-light"
-                        android:textColor="@color/colorText"
-                        android:text="@string/timenote_visibility_format"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                    <TextView
-                        android:id="@+id/profile_settings_default_settings_at_creation_time"
-                        android:textColor="@color/colorText"
-                        android:fontFamily="sans-serif-light"
-                        android:padding="16dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
@@ -505,6 +505,25 @@
 
             <TextView
                 android:fontFamily="sans-serif-light"
+                android:id="@+id/profile_settings_terms_of_use"
+                android:background="@color/colorElevated"
+                android:padding="16dp"
+                android:textColor="@color/colorText"
+                android:text="@string/terms_of_use"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_line_7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/card_line_8"
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_terms_of_use"
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_send_comments"
                 android:background="@color/colorElevated"
                 android:padding="16dp"
@@ -512,7 +531,7 @@
                 android:text="@string/send_comments"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_line_7"
+                app:layout_constraintTop_toBottomOf="@id/card_line_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
