--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -255,7 +255,7 @@
                         android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_profile_name"
                         android:drawablePadding="8dp"
-                        android:text="@string/title"
+                        android:text="@string/title_create_event"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -338,7 +338,7 @@
                         android:drawableStart="@drawable/ic_new_timenote_when"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
-                        android:text="@string/when"
+                        android:text="@string/when_create_event"
                         android:paddingBottom="16dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
