--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -505,6 +505,25 @@
 
             <TextView
                 android:fontFamily="sans-serif-light"
+                android:id="@+id/profile_settings_terms_of_use"
+                android:background="@color/colorElevated"
+                android:padding="16dp"
+                android:textColor="@color/colorText"
+                android:text="@string/terms_of_use"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_line_7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/card_line_8"
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_terms_of_use"
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_send_comments"
                 android:background="@color/colorElevated"
                 android:padding="16dp"
@@ -512,7 +531,7 @@
                 android:text="@string/send_comments"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_line_7"
+                app:layout_constraintTop_toBottomOf="@id/card_line_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
